# finanalyser-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  build_production.py  pyproject.toml  requirements.txt  run_dev.py  sample_transactions.csv  web_api.py
finanalyser_mcp/: server.py
frontend/: .gitignore  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  animations.css  index.css  types.ts
frontend/src/components/: CategoryChart.tsx  ConfigurationPanel.tsx  FileUpload.tsx  Header.tsx  IncomeExpenseChart.tsx  InsightsPanel.tsx  LoadingSection.tsx  ResultsSection.tsx  StatCard.tsx  SuggestionsPanel.tsx  TransactionTable.tsx
frontend/src/utils/: currency.ts
