[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finanalyser-mcp"
version = "1.0.0"
description = "MCP server for analyzing financial transaction data with AI categorization via OpenRouter/OpenAI"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0"
]
requires-python = ">=3.8"
readme = "README.md"
keywords = ["mcp", "financial", "analysis", "ai", "transactions", "openrouter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
finanalyser-mcp = "finanalyser_mcp.server:main"

[project.urls]
Homepage = "https://github.com/yourusername/financial-analyzer-mcp"
Issues = "https://github.com/yourusername/financial-analyzer-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true